Lista versión inicial
Sólo instala y configura postgres. También instala django para python3

--- a/install_data/pg_hba.conf
+++ b/install_data/pg_hba.conf
@@ -86,5 +86,5 @@ local   all         postgres                          trust
 #host    all         all         ::1/128               md5
 # This is for general access databases:
 local   all         all                               trust
-host    all         all         0.0.0.0/0          trust
+host    all         all         all                  password
 #host    all             all             0.0.0.0/0            md5
